made changes to slides

--- a/machine_learning_debt.html
+++ b/machine_learning_debt.html
@@ -29,6 +29,32 @@ class: bottom, left, my-title, title-slide
 
 ## Cost of the "speed vs. quality" tradeoff
 
+* Convenient methods promote speed of development
+* However, these methods tend to create compounding debt as the system grows in complexity
+
+## Not all debt is bad
+* Debt may be necessary in certain situations, especially in initial development of systems
+ 
+* Important to be aware of sources of technical debt, as costs tend to compound with additional debt
+
+
+---
+
+# From a traditional software engineering perspective...
+
+## Technical debt can be paid off by
+
+* Refactoring code, deleting dead code
+* Improved unit testing
+* Improved documentation
+* Reducing dependencies
+
+## The goal is NOT to add new functionality, but to improve the system (ease of future development/maintenance and reduction of bugs)
+
+---
+
+# From a machine learning (or modelling, more generally) perspective...
+
 
 
 ---
